updating for wiremod repo fork

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "bootil"]
 	path = bootil
-	url = https://github.com/AbigailBuccaneer/bootil.git
+	url = https://github.com/garrynewman/bootil.git
 [submodule "gmad"]
 	path = gmad
 	url = https://github.com/garrynewman/gmad.git
